--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 *{
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
     outline: 0;
     box-sizing: 0;
 }
@@ -9,57 +9,90 @@ body{
     font:400 14px 'Roboto', sans-serif;
     background: #f0f0f5;
     -webit-font-smoothing:antialiased;
-    background-color: rgb(40, 236, 250);
-}
-input, button, textarea, select{
-    font:400 14px 'Roboto', sans-serif;     
-  }
-  form input{
-    width: 100%;
-    border: 1px solid #dcdce6;
-    border-radius:5px ;
-    margin:3px;
-    padding: 3px;
-}
-.logon-container{
-    padding-top:50px;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
- 
- 
- }
- .button-logon{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 90%;
-    height: 25px;
-    background-color: #1afb99;
-    border:0;
-    border-radius: 5px;
-    color:#FFF;
-    font-weight: 700;
-    text-align: center;
-    text-decoration:none;
-    font-size: 14px;
-    transition: filter 0.2s;
-}
-.button-logon:hover{
-    filter:brightness(90%);
-    cursor: pointer;
-}
-.ajuste-fonte{
-    font-size: 57px;
-    /* background-image: linear-gradient(rgb(56, 199, 243),rgb(43, 241, 255)); */
-    /* background-image: linear-gradient(rgb(29, 194, 244),rgb(43, 241, 255)); */
-    background-image: linear-gradient(to right,rgb(15, 27, 255),rgb(80, 247, 119));
-    -webkit-background-clip: text; 
-    color: transparent;
     
-}   
-
-hr {
-    border: 1px solid #ff0000; /* Define a cor da borda como vermelha */
-    background-color: #ff0000; /* Define a cor de fundo como vermelha */
-    height: 2px; /* Define a altura da linha */
 }
+    .logon-container{
+    
+        width: 100%;
+        height: 100%;
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        border: solid 0.5px #cfc1d9;
+        border-radius: 5px;
+        width: 300px;
+        padding: 20px;
+        margin:auto;
+        margin-top: 20px;
+    }
+
+    h1{
+        text-align: center;
+    }
+    input, button, textarea, select{
+        font:400 14px 'Roboto', sans-serif;  
+      }
+      form input{
+        width: 100%;
+        border: 1px solid #dcdce6;
+        border-radius:5px ;
+        margin:3px;
+        padding: 5px;
+    }
+    img{
+        width: 250px;
+        
+    }
+    .logo{
+    display: flex;
+    justify-content: center;
+    
+    }
+    .button-logon{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 100%;
+        padding: 12px;
+        background-color: #e02041;
+        border:0;
+        border-radius: 5px;
+        color:#FFF;
+        font-weight: 700;
+        text-align: center;
+        text-decoration:none;
+        font-size: 14px;
+        transition: filter 0.2s;
+    }
+    .button_login:hover{
+        filter:brightness(90%);
+        cursor:pointer
+    }
+    a{
+        text-decoration: none;
+        color: blue;
+    }
+    p{
+        margin-top: 10px;
+    }
+
+    .menu{
+        width: 20%;
+        background-color: #ffff;
+        margin: 5px;
+        border: 0.5px solid silver;
+        border-radius: 5px;
+    }
+    .main{
+        width: 80%;
+        background-color: #f8f8f8;
+        border: 0.5px solid silver;
+        border-radius: 5px;
+        margin: 5px;
+        padding: 15px;
+    }
+    .dashboard-container{
+ display: flex;
+ flex-direction: row;
+    }
