--- a/src/global.css
+++ b/src/global.css
@@ -45,12 +45,13 @@ body{
         width: 250px;
         
     }
-    .logo{
-    display: flex;
-    justify-content: center;
+    .logoicon{
+      width: 60px !important;
+      border-radius: 50%;
+      border: solid 0.5px rgba(255, 166, 0, 0.516);
     
     }
-    .button-logon{
+    .button_login{
         margin-top: 10px;
         margin-bottom: 10px;
         width: 100%;
@@ -93,42 +94,45 @@ body{
         padding: 15px;
     }
     .dashboard-container{
- display: flex;
- flex-direction: row;
+    display: flex;
+    flex-direction: column;
     }
-    form{
-        filter: drop-shadow(2px  7px 2px black);
+    .header{
+        display: flex;
+        flex-direction: row;
     }
-    section{
-        margin-top: 10%;
+    .barrasuperior{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding:10px;
     }
-    img{
-        border-radius: 9%;
-    }   
     .link{
         display: flex;
         width: 85%;
         border-radius: 5px;
         border: #a29d7f 1px solid;
-        color: #9c8680;
+        align-items: center;
+        border-radius: 5px;
+        color:#9c8680;
         padding: 10px;
         margin: auto;
-        margin-top: 5PX;
+        margin-top:8px;
         
-        justify-content: center;
+        
     }
-    NAV{
-        height: 90VH;
-    }
-    .link:hover{
-        background-color: #88a27f;
-        color: white;
-    }
-    .icons-menu{
-        margin-right: 10px;
+    nav{
+        height: 90vh;
     }
 
-    .btn-salvar{
+    .link:hover{
+        background-color:#a29d7f ;
+        color: white;
+       }
+       .icon-menu{
+           padding-right: 20px;
+       }
+       .btn-salvar{
         margin-top: 10px;
         margin-bottom: 10px;
         width: 100%;
@@ -147,9 +151,10 @@ body{
         filter:brightness(90%);
         cursor:pointer
     }
-    .btn-novo{
+       .btn-novo{
         margin-top: 10px;
         margin-bottom: 10px;
+        margin-right: 100%;
         width: 100%;
         padding: 12px;
         background-color: green;
@@ -161,65 +166,19 @@ body{
         text-decoration:none;
         font-size: 14px;
         transition: filter 0.2s;
-        margin-right: 100%;
+        
     }
     .btn-novo:hover{
         filter:brightness(90%);
-        cursor:pointer  
+        cursor:pointer
     }
     table{
         font:400 16px 'Roboto', sans-serif; 
         margin: 0 auto;
-    
-        
+   
     }
     th, td {
         border-bottom: 1px solid #96D4D4;
         text-align: left;
         padding: 5px;
       }
-
-
-      /* sbdh */
-      
-      .ajuste-container {
-        display: flex;
-        align-items: center;
-        padding: 20px;
-        border: solid 2px black;
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-    
-    .imagem {
-        width: 100px; 
-        height: auto; 
-        margin-right: 20px; 
-    }
-    
-    .content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    
-    .content h1 {
-        margin: 0;
-        text-align: center;
-        
-    }
-    
-    button {
-        margin-left: auto;
-    }
-    .link-right {
-        margin-left: auto;
-    }
-    
-    
-      
-      
-      
-      
-      
